<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    android:layout_marginBottom="@dimen/_10sdp"
    android:layout_marginTop="@dimen/_10sdp"
    app:cardUseCompatPadding="false"
    android:clipChildren="false"
    android:clipToPadding="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            app:layout_constraintRight_toLeftOf="@+id/calculatorIMG"
            android:id="@+id/tv_card_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/finances"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            android:textColor="@color/dark_gray"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:src="@drawable/ic_calculator"
            app:layout_constraintBottom_toBottomOf="@+id/tv_card_title"
            app:layout_constraintTop_toTopOf="@+id/tv_card_title"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/calculatorIMG"
            android:layout_width="@dimen/_12sdp"
            android:layout_height="@dimen/_12sdp"
            app:tint="@color/dark_gray" />


        <TextView
            app:layout_constraintTop_toBottomOf="@+id/tv_card_title"
            android:id="@+id/tvTaxLimit"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tax_limit"
            android:textSize="@dimen/_8sdp"
            android:textStyle="bold"
            android:textColor="@color/dark_gray"
            app:layout_constraintStart_toStartOf="parent" />


        <ProgressBar
            android:id="@+id/custom_indicator"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:layout_marginTop="5dp"
            android:progressDrawable="@drawable/pill_indicator_bg"
            android:max="100"
            android:progress="60"
            app:layout_constraintTop_toBottomOf="@id/tvTaxLimit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

<!--Income view-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginRight="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@+id/custom_indicator"
            android:id="@+id/viewA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintEnd_toStartOf="@+id/viewB"

            app:layout_constraintHorizontal_weight="1"

            app:layout_constraintHorizontal_chainStyle="packed" >
            <TextView
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/tvIncome"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income"
                android:textSize="@dimen/_7sdp"
                android:textStyle="bold"
                android:textColor="@color/dark_gray"
                app:layout_constraintStart_toStartOf="parent" />
 <TextView
     android:id="@+id/tvIncomeValue"
app:layout_constraintTop_toBottomOf="@+id/tvIncome"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
     android:text="1 175 200.00 〒"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold"
                android:textColor="@color/app_color"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginLeft="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@+id/custom_indicator"
            android:layout_marginTop="@dimen/_10sdp"

            android:id="@+id/viewB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"


            app:layout_constraintStart_toEndOf="@+id/viewA"

            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_weight="1" >
            <TextView
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/tvOutcome"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/outcome"
                android:textSize="@dimen/_7sdp"
                android:textStyle="bold"
                android:textColor="@color/dark_gray"
                app:layout_constraintStart_toStartOf="parent" />
            <TextView
                android:id="@+id/tvOutComeValue"
                app:layout_constraintTop_toBottomOf="@+id/tvOutcome"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1 005 300.00 〒"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold"
                android:textColor="@color/dark_gray"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>