<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    android:layout_marginTop="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/_2sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_12sdp">

        <TextView
            android:id="@+id/tv_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black_light"
            android:textSize="16sp"
            android:maxLines="2"
            android:ellipsize="end"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_amount_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Amount left:"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintTop_toBottomOf="@+id/tv_product_name"
            app:layout_constraintStart_toStartOf="parent" />
 <TextView
     android:layout_marginLeft="@dimen/_5sdp"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintLeft_toRightOf="@+id/tv_amount_left"
            android:id="@+id/tv_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="1 pcs"
            android:textColor="@color/coral_orange"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintTop_toBottomOf="@+id/tv_product_name"
             />

        <ProgressBar
            android:id="@+id/inventory_indicator"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="12dp"
            android:max="100"
            android:progress="1"
            android:progressTint="@color/coral_orange"
            android:progressDrawable="@drawable/pill_indicator_bg"
            app:layout_constraintTop_toBottomOf="@+id/tv_amount_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <RelativeLayout
            android:id="@+id/btn_hide"
            android:layout_width="0dp"
            android:padding="@dimen/_8sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_light_bg"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/inventory_indicator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_edit" >
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/ic_delete"
                    android:layout_width="@dimen/_8sdp"
                    android:layout_height="@dimen/_8sdp"/>
                <TextView
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_5ssp"
                    android:text="@string/hide"
                    android:textSize="@dimen/_10sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_teal_light_bg"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/inventory_indicator"
            app:layout_constraintStart_toEndOf="@+id/btn_hide"
            app:layout_constraintEnd_toStartOf="@+id/btn_order" >
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/ic_edit"
                    android:layout_width="@dimen/_8sdp"
                    android:layout_height="@dimen/_8sdp"
                    app:tint="@color/white" />
                <TextView
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_5ssp"
                    android:text="@string/edit"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/btn_order"
            android:padding="@dimen/_8sdp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:background="@drawable/button_teal_dark_bg"
            app:layout_constraintHorizontal_weight="1.2"
            app:layout_constraintTop_toBottomOf="@+id/inventory_indicator"
            app:layout_constraintStart_toEndOf="@+id/btn_edit"
            app:layout_constraintEnd_toEndOf="parent" >
            <LinearLayout
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center"
                    android:src="@drawable/ic_cart"
                    android:layout_width="@dimen/_8sdp"
                    android:layout_height="@dimen/_8sdp"
                    app:tint="@color/white" />
                <TextView
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_5ssp"
                    android:text="@string/order"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>